# watson

./: .gitignore  README.md
.workshop/: claude-code.yaml  copilot.yaml
design/: adr.md
prompts/: architect.txt  coder.txt  shared-objectives.txt  synthesis.txt
watson/: .env.example  mcp_servers.json  pyproject.toml
watson/tests/: conftest.py  test_agent.py  test_e2e.py  test_mcp_client.py  test_search_issues.py
watson/tests/fixtures/: llm_response.md  mcp_responses.json  mcp_tools.json
watson/watson/: __init__.py  agent.py  cli.py  mcp_client.py  models.py  orchestrator.py  output.py
