[project]
name = "watson"
version = "0.1.0"
description = "Product feedback triage assistant powered by Jira MCP + GitHub Copilot"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.3",
    "mcp>=1.27.1",
    "openai>=2.36.0",
    "python-dotenv>=1.2.2",
]

[project.scripts]
watson = "watson.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "hatchling>=1.29.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
